--- a/devindurham.index.css
+++ b/devindurham.index.css
@@ -4,7 +4,7 @@ body {
    font-family: Helvetica;
    background-size: cover;
    background-position: center center;
-   opacity: 0.5
+   opacity: 0.5;
 
    background-attachment: fixed;
    
