--- a/devindurham.index.css
+++ b/devindurham.index.css
@@ -1,4 +1,8 @@
 body {
+   background-color: white;
+	
+	
+	/*
    background: url("https://cx4mbw-bn1306.files.1drv.com/y3mQwYGplXJhaRiIodrLS82qhM9tJONOV62UEj9ItabttPZkQLGjqQD5ZFF7HD6lU_2v-mXi8otoSsvmsF4EFHmei-W4q_VNUBWtexsFUm-j6d61ztfvsmH3kw50PdiizyLJ925_LEdHm_yLbe7rlllXA?width=1278&height=720&cropmode=none");
    color: white;
    font-family: Helvetica;
@@ -6,7 +10,7 @@ body {
    background-position: center center;
 
    background-attachment: fixed;
-   
+   */
 }
 
 
