--- a/devindurham.index.css
+++ b/devindurham.index.css
@@ -1,7 +1,7 @@
 body {
    
    background: url("https://cx4mbw-bn1306.files.1drv.com/y3mQwYGplXJhaRiIodrLS82qhM9tJONOV62UEj9ItabttPZkQLGjqQD5ZFF7HD6lU_2v-mXi8otoSsvmsF4EFHmei-W4q_VNUBWtexsFUm-j6d61ztfvsmH3kw50PdiizyLJ925_LEdHm_yLbe7rlllXA?width=1278&height=720&cropmode=none");
-   background-color: rgba(0,0,0,.5);
+   background: rgba(0,0,0,.5);
    font-family: Helvetica;
    background-size: cover;
    background-position: center center;
