--- a/devindurham.index.css
+++ b/devindurham.index.css
@@ -15,7 +15,7 @@ body {
 	border: 25px rgb(200,0,0);
 	padding: 25px;
         margin: 25px;
-        background: rgb(0,0,0);
+        background: white);
 }
 
 
