--- a/devindurham.index.css
+++ b/devindurham.index.css
@@ -11,11 +11,11 @@ body {
 }
 
 .boxed {
-	width: 300px;
-	border: 25px rgb(200,0,0);
-	padding: 25px;
-        margin: 25px;
-        background-color: white;
+	background-color: white;
+    	width: 300px;
+    	border: 25px solid green;
+    	padding: 25px;
+    	margin: 25px;
 }
 
 
