--- a/devindurham.index.css
+++ b/devindurham.index.css
@@ -11,12 +11,13 @@ body {
 }
 
 .boxed {
+	border: 2px solid black;
+    	border-radius: 8px;
 	background-color: white;
     	width: 500px;
     	border: 1px solid black;
     	padding: 25px;
     	margin: 25px;
-	border-radius: 5px;
 }
 
 
