--- a/devindurham.index.css
+++ b/devindurham.index.css
@@ -14,9 +14,9 @@ body {
 	border: 10px solid black;
     	border-radius: 8px;
 	background-color: white;
-    	width: 500px;
+    	width: 50%;
     	padding: 25px;
-    	margin: 25px;
+    	margin: auto;
 }
 
 
