--- a/devindurham.contact.css
+++ b/devindurham.contact.css
@@ -1,5 +1,6 @@
-.address {
-  font-family: Helvetica;
-  color: black;
-  text-decoration: none;
+.address a{
+
+  color: rgb(0,0,0);
+	font-size: 1.25em;
+	text-decoration: underline;
 }
