--- a/CSS/devindurham.index.css
+++ b/CSS/devindurham.index.css
@@ -19,13 +19,14 @@ body {
 }
 
 
-.buttons {
+.buttons ul{
+	display: inline;
 	
 
 }
 
 .buttons a{
-	display: inline;
+
   color: rgb(0,0,0);
 	font-size: 1.25em;
 	text-decoration: underline;
