--- a/CSS/devindurham.index.css
+++ b/CSS/devindurham.index.css
@@ -19,38 +19,19 @@ body {
 }
 
 
+
+<!--
 .buttons ul{
 	display: inline;
-	
+}
 
+.buttons li{
+	display: inline;
 }
 
 .buttons a{
-
-  color: rgb(0,0,0);
+	color: rgb(0,0,0);
 	font-size: 1.25em;
 	text-decoration: underline;
 }
-
-h1 {
-
-
-}
-
-img{
-
-
-}
-
-h3{
-
-
-}
-nav li{
-	
-	 display: inline;
-}
-
-nav ul{
-	 display: inline;
-}
+//-->
