--- a/CSS/devindurham.index.css
+++ b/CSS/devindurham.index.css
@@ -12,8 +12,8 @@ body {
 .top img{
 	padding-right: 25px;
 	padding-bottom: 25px;
-	height: 25%;
-	width: 25% 
+	min-height: 250px;
+	min-width: 250px; 
 }
 	
 
