--- a/CSS/devindurham.media.css
+++ b/CSS/devindurham.media.css
@@ -2,6 +2,18 @@ body{
   background: black;
 
 }
+
+.nav {
+	border: 10px solid black;
+ 	border-radius: 8px;
+	background-color: white;
+  width: 67%;
+  padding: 25px;
+  margin: auto;
+}
+
+
+
 .pics img {
   float: left;
   height: 25%;
@@ -13,10 +25,6 @@ body{
   min-height: 15%;
   min-width: 15%;
   max-height: 70%;
-  max-width: 70;
-
-
-  
-  
+  max-width: 70; 
   
 }
