--- a/CSS/devindurham.index.css
+++ b/CSS/devindurham.index.css
@@ -32,18 +32,29 @@ body {
 }
 
 .buttons ul{
-	display: inline;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
 }
 
 .buttons li{
-	display: inline;
+	float: left;
 }
 
-.buttons a{
-	color: rgb(0,0,0);
-	font-size: 1.25em;
-	text-decoration: bold;
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
 }
+
+li a:hover {
+    background-color: #111;
+}
+
 
 
 
