--- a/navBar.css
+++ b/navBar.css
@@ -1,1 +1,23 @@
+.buttons{
+	clear: left;
+}
 
+.buttons ul{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: black;
+}
+
+.buttons li{
+	float: left;
+}
+
+.buttons li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
