--- a/CSS/navBar.css
+++ b/CSS/navBar.css
@@ -27,7 +27,7 @@ body> .boxed> .top> img{
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: green;
+    background-color: gray;
 }
 
 .buttons li{
