--- a/CSS/devindurham.resume.css
+++ b/CSS/devindurham.resume.css
@@ -14,7 +14,6 @@ div.top{
 	top: 50%;
 	bottom: 50%
 	display: block;
-	padding.
 	
 }
 
@@ -64,12 +63,14 @@ body> .boxed> .top> h1{
 }
 
 .active {
-    background-color: green;
+    background-color: purple;
 }
 
 
 div.pdf{
+	padding: 500px;
   margin: auto;
+	
 
 
 }
