--- a/CSS/devindurham.index.css
+++ b/CSS/devindurham.index.css
@@ -1,5 +1,5 @@
 body {
-   
+   background-image: url("../media/pictures/WP_20130817_181.jpg");
    font-family: Helvetica;
    background-size: cover;
    background-position: center center;
