--- a/CSS/devindurham.contact.css
+++ b/CSS/devindurham.contact.css
@@ -3,7 +3,7 @@
     	border-radius: 0px;
 	background-color: white;
     	width: 67%;
-    	padding: 10px;
+    	padding-top: 10px;
     	margin: auto;
 }
 
