--- a/CSS/devindurham.contact.css
+++ b/CSS/devindurham.contact.css
@@ -3,8 +3,7 @@
     	border-radius: 0px;
 	background-color: white;
     	width: 67%;
-    	padding-top: 50px;
-    	margin: auto;
+    	margin: 50px;
 }
 
 .address a{
