--- a/CSS/devindurham.contact.css
+++ b/CSS/devindurham.contact.css
@@ -3,7 +3,8 @@
     	border-radius: 0px;
 	background-color: white;
     	width: 67%;
-    	margin-top: 50px;
+    	margin: auto;
+	margin-top: 25px;
 }
 
 .address a{
