--- a/CSS/devindurham.about.css
+++ b/CSS/devindurham.about.css
@@ -1,3 +1,9 @@
-body {
-
+.contactBox {
+	border: 10px solid black;
+    	border-radius: 0px;
+	background-color: white;
+    	width: 67%;
+    	margin: auto;
+	margin-top: 25px;
+	padding: 10px;
 }
