--- a/CSS/devindurham.about.css
+++ b/CSS/devindurham.about.css
@@ -2,10 +2,10 @@
 	border: 10px solid black;
     	border-radius: 0px;
 	background-color: white;
-    	width: 66%;
+    	width: 67%;
     	margin: auto;
 	margin-top: 25px;
-	padding: 25px;
+	padding: px;
 }
 
 
