--- a/CSS/devindurham.about.css
+++ b/CSS/devindurham.about.css
@@ -10,11 +10,11 @@
 
 
 body> .aboutBox> h1{
-	  padding: 0px;
-    margin: 10px;
+	  padding: 10px;
+    margin: auto;
 }
 
 body> .aboutBox> p{
-	  padding: 0px;
-    margin: 10px;
+	  padding: 10px;
+    margin: auto;
 }
