--- a/CSS/devindurham.about.css
+++ b/CSS/devindurham.about.css
@@ -10,11 +10,16 @@
 
 
 body> .aboutBox> h1{
-	  padding: 10px;
+	  padding: 20px;
+    margin: auto;
+}
+
+body> .aboutBox> h1{
+	  padding: 20px;
     margin: auto;
 }
 
 body> .aboutBox> p{
-	  padding: 10px;
+	  padding: 20px;
     margin: auto;
 }
