--- a/CSS/devindurham.posts.css
+++ b/CSS/devindurham.posts.css
@@ -1,1 +1,9 @@
-
+.postsBox {
+	border: 10px solid black;
+    	border-radius: 0px;
+	background-color: white;
+    	width: 67%;
+    	margin: auto;
+	margin-top: 25px;
+	padding: 0px;
+}
