--- a/CSS/devindurham.media.css
+++ b/CSS/devindurham.media.css
@@ -12,6 +12,9 @@ body{
     	margin: auto;
 	margin-top: 25px;
 	padding: 0px;
+	display:flex;
+   flex-wrap: wrap;
+
 	justify-content: center ;
 }
 
