--- a/CSS/devindurham.media.css
+++ b/CSS/devindurham.media.css
@@ -33,7 +33,7 @@ body{
     	border-radius: 0px;
 	background-color: white;
     	width: 33%;
-    	margin: auto;
+    	margin: 0;
 
 	padding: 0px;
 }
@@ -43,7 +43,7 @@ body{
     	border-radius: 0px;
 	background-color: white;
     	width: 33%;
-    	margin: auto;
+    	margin: 0;
 
 	padding: 0px;
 }
