--- a/CSS/devindurham.media.css
+++ b/CSS/devindurham.media.css
@@ -11,7 +11,7 @@ body{
     	width: 67%;
     	margin: auto;
 	margin-top: 25px;
-	padding: 0px;
+	padding: 10%;
 	display:flex;
         flex-wrap: wrap;
 	text-align: center;
