--- a/CSS/devindurham.media.css
+++ b/CSS/devindurham.media.css
@@ -29,6 +29,7 @@ body{
 }
 
 .videoBox {
+	float: left;
 	border: 5px solid black;
     	border-radius: 0px;
 	background-color: white;
@@ -39,6 +40,7 @@ body{
 }
 
 .writingBox {
+	float: left;
 	border: 5px solid black;
     	border-radius: 0px;
 	background-color: white;
