--- a/CSS/devindurham.media.css
+++ b/CSS/devindurham.media.css
@@ -18,7 +18,7 @@ body{
 }
 
 .picsBox {
-	float: left;
+	display: inline-block;
 	border: 5px solid black;
     	border-radius: 0px;
 	background-color: white;
@@ -28,6 +28,7 @@ body{
 }
 
 .videoBox {
+	display: inline-block;
 	border: 5px solid black;
     	border-radius: 0px;
 	background-color: white;
@@ -38,7 +39,7 @@ body{
 }
 
 .writingBox {
-	float: right;
+	display: inline-block;
 	border: 5px solid black;
     	border-radius: 0px;
 	background-color: white;
