--- a/CSS/devindurham.media.css
+++ b/CSS/devindurham.media.css
@@ -23,6 +23,7 @@ body{
     	border-radius: 0px;
 	background-color: white;
     	width: 31%;
+	margin: 0;
 	padding: 0px;
 	
 }
@@ -34,6 +35,7 @@ body{
 	background-color: white;
     	width: 31%;
 	padding: 0px;
+	margin: 0;
 
 }
 
@@ -44,6 +46,7 @@ body{
 	background-color: white;
     	width: 31%;
 	padding: 0px;
+	margin: 0;
 	
 }
 
