--- a/CSS/devindurham.media.css
+++ b/CSS/devindurham.media.css
@@ -23,7 +23,7 @@ body{
     	border-radius: 0px;
 	background-color: white;
     	width: 31%;
-	margin: 0;
+	margin: 0px;
 	padding: 0px;
 	
 }
@@ -35,7 +35,7 @@ body{
 	background-color: white;
     	width: 31%;
 	padding: 0px;
-	margin: 0;
+	margin: 0px;
 
 }
 
@@ -46,7 +46,7 @@ body{
 	background-color: white;
     	width: 31%;
 	padding: 0px;
-	margin: 0;
+	margin: 0px;
 	
 }
 
