--- a/CSS/devindurham.media.css
+++ b/CSS/devindurham.media.css
@@ -7,7 +7,7 @@ body{
 .mediaBox {
 	border: 10px solid black;
     	border-radius: 0px;
-	background-color: white;
+	background-color: black;
     	width: 67%;
 	margin-top: 25px;
 	text-align: center;
