--- a/CSS/devindurham.media.css
+++ b/CSS/devindurham.media.css
@@ -8,6 +8,7 @@ body{
 	border: 10px solid black;
     	border-radius: 0px;
 	background-color: black;
+	color: white;
     	width: 67%;
 	margin-top: 25px;
 	text-align: center;
