--- a/CSS/devindurham.media.css
+++ b/CSS/devindurham.media.css
@@ -23,7 +23,7 @@ body{
 	display: inline-block;
 	border: 5px solid black;
     	border-radius: 0px;
-	background-color: white;
+	background-color: black;
     	width: 31%;
 	margin: 0px;
 	padding: 0px;
@@ -34,7 +34,7 @@ body{
 	display: inline-block;
 	border: 5px solid black;
     	border-radius: 0px;
-	background-color: white;
+	background-color: black;
     	width: 31%;
 	padding: 0px;
 	margin: 0px;
@@ -45,7 +45,7 @@ body{
 	display: inline-block;
 	border: 5px solid black;
     	border-radius: 0px;
-	background-color: white;
+	background-color: black;
     	width: 31%;
 	padding: 0px;
 	margin: 0px;
