--- a/CSS/devindurham.posts.css
+++ b/CSS/devindurham.posts.css
@@ -5,10 +5,5 @@
     	width: 67%;
     	margin: auto;
 	margin-top: 25px;
-	padding: 0px;
-}
-
-.postsBox>script{
-	margin: 500px;
-	padding: 200px;
+	padding: 30%;
 }
