--- a/CSS/devindurham.contact.css
+++ b/CSS/devindurham.contact.css
@@ -1,3 +1,11 @@
+body{
+   background-image: url("../media/pictures/WP_20140814_013.jpg");
+   font-family: Helvetica;
+   background-size: cover;
+   background-position: center center;
+   background-attachment: fixed;
+}
+
 .contactBox {
 	border: 10px solid black;
     	border-radius: 0px;
