--- a/CSS/devindurham.about.css
+++ b/CSS/devindurham.about.css
@@ -1,3 +1,12 @@
+body{
+   background-image: url("../media/pictures/WP_20150702_21_21_14_Pro (2).jpg");
+   font-family: Helvetica;
+   background-size: cover;
+   background-position: center center;
+   background-attachment: fixed;
+}
+
+
 .aboutBox {
 	border: 10px solid black;
     	border-radius: 0px;
