--- a/CSS/devindurham.media.css
+++ b/CSS/devindurham.media.css
@@ -1,7 +1,11 @@
-body{
-  background: black;
-	 font-family: Helvetica;
+body {
+   background-image: url("../media/pictures/WP_20161026_02_32_27_Pro.jpg");
+   font-family: Helvetica;
+   background-size: cover;
+   background-position: center center;
 
+   background-attachment: fixed;
+   
 }
 
 .mediaBox {
