--- a/CSS/devindurham.about.css
+++ b/CSS/devindurham.about.css
@@ -1,10 +1,11 @@
 body{
-   background-image: url("../media/pictures/WP_20150702_21_21_14_Pro (2).jpg");
+   background-image: url("../media/pictures/WP_20161026_02_32_27_Pro.jpg");
    font-family: Helvetica;
    background-size: cover;
    background-position: center center;
    background-attachment: fixed;
 }
+
 
 
 .aboutBox {
