--- a/CSS/devindurham.posts.css
+++ b/CSS/devindurham.posts.css
@@ -1,5 +1,5 @@
-body {
-   background-image: url("../media/pictures/WP_20160522_15_17_47_Pro_LI (3).jpg");
+body {   
+	background-image: url("../media/pictures/WP_20161026_02_32_27_Pro.jpg");
    font-family: Helvetica;
    background-size: cover;
    background-position: center center;
