--- a/CSS/devindurham.projects.css
+++ b/CSS/devindurham.projects.css
@@ -7,7 +7,7 @@ body{
 }
 
 
-body> .projectsBox3 {
+body> .projectBoxes > .projectsBox3 {
 	border: 10px solid black;
 	border-radius: 0px;
 	Background-color: white;
@@ -17,7 +17,7 @@ body> .projectsBox3 {
 	padding: 0px;
 }
 
-body> .projectsBox2 {
+body> .projectBoxes >.projectsBox2 {
 	border: 10px solid black;
 	border-radius: 0px;
 	background-color: white;
@@ -27,7 +27,7 @@ body> .projectsBox2 {
 	padding: 0px;
 }
 
-body> .projectsBox1 {
+body> .projectBoxes >.projectsBox1 {
 	border: 10px solid black;
    	border-radius: 0px;
 	background-color: white;
