--- a/CSS/devindurham.projects.css
+++ b/CSS/devindurham.projects.css
@@ -6,6 +6,18 @@ body{
    background-attachment: fixed;
 }
 
+body> .projectBoxes> p {
+	padding-left: 20px;
+}
+
+body> .projectBoxes> h3 {
+	padding-left: 20px;
+}
+
+body> .projectBoxes> h1 {
+	padding-left: 20px;
+}
+
 
 body> .projectBoxes > .projectsBox3 {
 	border: 10px solid black;
