--- a/CSS/devindurham.projects.css
+++ b/CSS/devindurham.projects.css
@@ -10,16 +10,19 @@ body{
 p{
 	padding: 25px;
 	margin: auto;
+	margin-top: 0;
 }
 
 h3 {
 	padding: 25px;
 	margin: auto;
+	margin-top: 0;
 }
 
 h1 {
 	padding: 25px;
 	margin: auto;
+	margin-bottom: 0;
 }
 
 
