--- a/CSS/devindurham.projects.css
+++ b/CSS/devindurham.projects.css
@@ -11,10 +11,12 @@ p{
 	padding: 10px;
 	margin: auto;
 	margin-top: 0;
+	margin-left: 15px;
+	margin-right: 15px;
 }
 
 h3 {
-	padding: 10px;
+	padding: 15px;
 	margin: auto;
 	margin-top: 0;
 	text-decoration: underline;
