--- a/CSS/devindurham.projects.css
+++ b/CSS/devindurham.projects.css
@@ -16,19 +16,9 @@ p{
 	margin-bottom: 15px;
 }
 
-h3 {
-	padding: 15px;
-	margin: auto;
-	margin-top: 0;
-	text-decoration: underline;
-}
 
-h1 {
-	padding: 10px;
-	margin: auto;
-	margin-bottom: 0;
-	
-}
+
+
 
 
 body> .projectBoxes > .projectsBox3 {
@@ -43,6 +33,18 @@ body> .projectBoxes > .projectsBox3 {
 
 body> .projectBoxes > h1{
 	font-style: italic;
+	padding: 10px;
+	margin: auto;
+	margin-bottom: 0;
+	
+
+}
+
+body> .projectBoxes > h3 {
+	padding: 15px;
+	margin: auto;
+	margin-top: 0;
+	text-decoration: underline;
 }
 
 
