--- a/CSS/devindurham.projects.css
+++ b/CSS/devindurham.projects.css
@@ -16,7 +16,7 @@ p{
 	margin-bottom: 15px;
 }
 
-.projectBoxes > h1{
+body> .projectBoxes > .projectsBox3 > h1{
 	font-style: italic;
 	padding: 10px;
 	margin: auto;
@@ -25,7 +25,7 @@ p{
 
 }
 
-.projectBoxes > h3 {
+body> .projectBoxes > h3 {
 	padding: 15px;
 	margin: auto;
 	margin-top: 0;
