--- a/CSS/devindurham.projects.css
+++ b/CSS/devindurham.projects.css
@@ -26,7 +26,7 @@ body> .projectBoxes > .projectsBox3 > h1{
 
 }
 
-body .projectBoxes .h3{
+body .projectBoxes h3{
 	padding: 15px;
 	margin: auto;
 	margin-top: 0;
