--- a/CSS/devindurham.resume.css
+++ b/CSS/devindurham.resume.css
@@ -11,7 +11,7 @@ body{
     	border-radius: 0px;
 	background-color: white;
     	width: 67%;
-	height: 100%;
+	height: 700px;
     	margin: auto;
 	margin-top: 25px;
 	padding: 0px;
