--- a/CSS/devindurham.posts.css
+++ b/CSS/devindurham.posts.css
@@ -13,7 +13,12 @@ body {
 	border: 10px solid black;
     	border-radius: 0px;
 	background-color: white;
-    	width: 100%;
+    	width: 67%;
     	margin: auto;
 	margin-top: 25px;
 }
+
+.postBox .a{
+	width: 100%;
+}
+
