--- a/CSS/devindurham.posts.css
+++ b/CSS/devindurham.posts.css
@@ -18,7 +18,7 @@ body {
 	margin-top: 25px;
 }
 
-.body .postsBox script{
+.body .postsBox .twitter-timeline{
 	text-align: center;
 	width: 100%;
 	margin: 0;
