--- a/CSS/devindurham.posts.css
+++ b/CSS/devindurham.posts.css
@@ -21,7 +21,6 @@ body {
 .body .postsBox .twitter-timeline{
 	text-align: center;
 	width: 100%;
-	margin: 0;
-	padding-left: 20px;
+	margin-left: 20px;
 }
 
