--- a/CSS/devindurham.posts.css
+++ b/CSS/devindurham.posts.css
@@ -18,9 +18,7 @@ body {
 	margin-top: 25px;
 }
 
-.postsBox > twitter-timeline{
-	text-align: center;
-	width: 100%;
+.postsBox script{
 	margin-left: 20px;
 }
 
