--- a/CSS/navBar.css
+++ b/CSS/navBar.css
@@ -33,6 +33,13 @@ body> .boxed> .top> h1{
 
 }
 
+body> .boxed> .top> h4{
+	padding-top: 10px;
+	font-style: italic;
+	margin-top: 0px;
+	margin-bottom: 5px;
+
+}
 
 
 .buttons{
