--- a/CSS/navBar.css
+++ b/CSS/navBar.css
@@ -36,8 +36,7 @@ body> .boxed> .top> h1{
 body> .boxed> .top> h4{
 	padding-top: 10px;
 	font-style: italic;
-	margin-top: 0px;
-	margin-bottom: 5px;
+	margin: 3px
 
 }
 
