--- a/CSS/navBar.css
+++ b/CSS/navBar.css
@@ -36,7 +36,8 @@ body> .boxed> .top> h1{
 body> .boxed> .top> h4{
 	padding-top: 10px;
 	font-style: italic;
-	margin: 3px
+	margin: 3px;
+	font-weight: lighter;
 
 }
 
