--- a/CSS/devindurham.contact.css
+++ b/CSS/devindurham.contact.css
@@ -16,16 +16,11 @@ body{
 	padding: 0px;
 }
 
-table> a{
+body> .contactBox> table{
 
   color: rgb(0,0,0);
 	text-decoration: underline;
 	font-weight: normal;
-}
-table> tr{
-	font-size: 1.25em;
-	font-weight: Bold;
-
 }
 
 body> .contactBox> h1{
