--- a/CSS/devindurham.contact.css
+++ b/CSS/devindurham.contact.css
@@ -16,7 +16,7 @@ body{
 	padding: 0px;
 }
 
-body> .contactBox> table{
+body> .contactBox> table> a{
 
   color: rgb(0,0,0);
 	text-decoration: underline;
