--- a/CSS/devindurham.contact.css
+++ b/CSS/devindurham.contact.css
@@ -16,6 +16,12 @@ body{
 	padding: 0px;
 }
 
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+
 a{
 
   color: rgb(0,0,0);
@@ -24,7 +30,7 @@ a{
 }
 
 td, th {
-    border: 1px solid #dddddd;
+    border:solid #dddddd;
     text-align: left;
     padding: 8px;
 }
