--- a/CSS/devindurham.contact.css
+++ b/CSS/devindurham.contact.css
@@ -42,6 +42,7 @@ tr:nth-child(even) {
 body> .contactBox> h1{
 	  padding: 20px;
     margin: 0px;
+	text-decoration: underline;
 }
 
 body>address{
