--- a/CSS/devindurham.contact.css
+++ b/CSS/devindurham.contact.css
@@ -17,6 +17,7 @@ body{
 }
 
 table {
+	padding-left: 20px;
     border-collapse: collapse;
     width: 100%;
 }
@@ -35,7 +36,7 @@ td, th {
     padding: 8px;
 }
 
-tr:nth-child(even) {
+tr:nth-child(odd) {
     background-color: #dddddd;
 }
 
