--- a/CSS/devindurham.contact.css
+++ b/CSS/devindurham.contact.css
@@ -17,7 +17,7 @@ body{
 }
 
 table {
-	padding: 20px;
+	margin-left: 20px;
     border-collapse: collapse;
     width: 100%;
 }
@@ -31,7 +31,6 @@ a{
 }
 
 td, th {
-	padding-left: 20px;
     font-weight: bold;
     text-align: left;
     padding: 8px;
