--- a/CSS/devindurham.contact.css
+++ b/CSS/devindurham.contact.css
@@ -17,7 +17,8 @@ body{
 }
 
 table {
-	margin: 20px;
+	margin-left: 20px;
+	margin-bottom: 20px;
     border-collapse: collapse;
     width: 100%;
 }
@@ -33,7 +34,7 @@ a{
 td, th {
     font-weight: bold;
     text-align: left;
-    padding: 8px;
+
 }
 
 tr:nth-child(odd) {
@@ -46,8 +47,4 @@ body> .contactBox> h1{
 	text-decoration: underline;
 }
 
-body>address{
-	margin:auto;
-	padding: 20px;
 
-}
