--- a/CSS/devindurham.index.css
+++ b/CSS/devindurham.index.css
@@ -32,6 +32,17 @@ body> .boxed> .top> h1{
     	margin: auto;
 }
 
+body> SubBoxes> div{
+	border: 10px solid black;
+	border-radius: 0px;
+	Background-color: white;
+	width: 67%;
+	margin: auto;
+	margin-top: 25px;
+
+}
+
+/*
 .buttons{
 	clear: left;
 }
@@ -59,7 +70,7 @@ body> .boxed> .top> h1{
 .active {
     background-color: rgb(0,71,171);
 }
-
+*/
 
 
 
