--- a/CSS/devindurham.index.css
+++ b/CSS/devindurham.index.css
@@ -25,7 +25,7 @@ body> .boxed> .top> h1{
 
 
 
-body> .boxed> .SubBoxes> .firstBox{
+SubBoxes> .firstBox{
 	border: 10px solid black;
 	border-radius: 0px;
 	Background-color: white;
@@ -35,7 +35,7 @@ body> .boxed> .SubBoxes> .firstBox{
 
 }
 
-body> .boxed> .SubBoxes> .SocialMediaBox{
+SubBoxes> .SocialMediaBox{
 	border: 10px solid black;
 	border-radius: 0px;
 	Background-color: white;
@@ -45,7 +45,7 @@ body> .boxed> .SubBoxes> .SocialMediaBox{
 
 }
 
-body>.boxed> .SubBoxes> .RecentUpdate{
+SubBoxes> .RecentUpdate{
 	border: 10px solid black;
 	border-radius: 0px;
 	Background-color: white;
