--- a/CSS/devindurham.index.css
+++ b/CSS/devindurham.index.css
@@ -8,7 +8,7 @@ body {
    
 }
 
-body> .boxed> .top> img{
+body> .navboxed> .top> img{
 	height: 30%;
 	width: 30%;
 	padding-right: 25px;
@@ -16,7 +16,7 @@ body> .boxed> .top> img{
 	min-width: 150px; 
 }
 
-body> .boxed> .top> h1{
+body> .navboxed> .top> h1{
 	padding-top: 20px;
 	margin-top: 0px;
 	margin-bottom: 5px;
@@ -25,7 +25,7 @@ body> .boxed> .top> h1{
 
 
 
-SubBoxes> .firstBox{
+body> bodySubBoxes>{
 	border: 10px solid black;
 	border-radius: 0px;
 	Background-color: white;
@@ -34,7 +34,7 @@ SubBoxes> .firstBox{
 	margin-top: 25px;
 
 }
-
+/*
 SubBoxes> .SocialMediaBox{
 	border: 10px solid black;
 	border-radius: 0px;
