--- a/CSS/devindurham.index.css
+++ b/CSS/devindurham.index.css
@@ -8,7 +8,7 @@ body {
    
 }
 
-body> .navboxed> .top> img{
+body> .boxed> .top> img{
 	height: 30%;
 	width: 30%;
 	padding-right: 25px;
@@ -16,7 +16,7 @@ body> .navboxed> .top> img{
 	min-width: 150px; 
 }
 
-body> .navboxed> .top> h1{
+body> .boxed> .top> h1{
 	padding-top: 20px;
 	margin-top: 0px;
 	margin-bottom: 5px;
@@ -24,7 +24,7 @@ body> .navboxed> .top> h1{
 }
 
 
-
+/*
 body> bodySubBoxes>{
 	border: 10px solid black;
 	border-radius: 0px;
@@ -34,7 +34,7 @@ body> bodySubBoxes>{
 	margin-top: 25px;
 
 }
-/*
+
 SubBoxes> .SocialMediaBox{
 	border: 10px solid black;
 	border-radius: 0px;
