--- a/CSS/devindurham.index.css
+++ b/CSS/devindurham.index.css
@@ -25,7 +25,7 @@ body> .boxed> .top> h1{
 
 
 
-body> bodySubBoxes{
+body> SubBoxes> div{
 	border: 10px solid black;
 	border-radius: 0px;
 	Background-color: white;
