--- a/CSS/devindurham.index.css
+++ b/CSS/devindurham.index.css
@@ -38,6 +38,7 @@ body> .SubBoxes> div{
 body> .SubBoxes> .div> h1,h4, h3, p{
 	margin-left: 15px;
 	margin-right: 15px;
+	padding-right: 15px;
 
 }
 
