--- a/CSS/devindurham.index.css
+++ b/CSS/devindurham.index.css
@@ -24,7 +24,7 @@ body> .SubBoxes> .div> h1,h4, h3, p{
 
 }
 
-body> .SubBoxes> h1, li{
+body> .SubBoxes> .div> .ul> h1, li{
 	margin-right: 15px;
 	margin-top: 10px;
 	
