--- a/CSS/devindurham.index.css
+++ b/CSS/devindurham.index.css
@@ -24,3 +24,13 @@ body> .SubBoxes> .div> h1,h4, h3, p{
 
 }
 
+body> .SubBoxes> div{
+	border: 10px solid black;
+	border-radius: 0px;
+	Background-color: white;
+	width: 67%;
+	margin: auto;
+	margin-top: 25px;
+
+}
+
