--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -45,15 +45,12 @@ body> .projectBoxes> div{
 
 #f1_container {
   position: relative;
-  margin: 10px auto;
   z-index: 1;
 }
 #f1_container {
   perspective: 1000;
 }
 #f1_card {
-  width: 100%;
-  height: 100%;
   transform-style: preserve-3d;
   transition: all 1.0s linear;
 }
@@ -62,17 +59,12 @@ body> .projectBoxes> div{
   box-shadow: -5px 5px 5px #aaa;
 }
 .face {
-  position: absolute;
-  width: 100%;
-  height: 100%;
   backface-visibility: hidden;
 }
 .face.back {
   display: block;
   transform: rotateY(180deg);
   box-sizing: border-box;
-  padding: 10px;
-  color: white;
-  text-align: center;
+  color: black;
   background-color: #aaa;
 }
