--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -59,6 +59,7 @@ body> .projectBoxes> div{
   box-shadow: -5px 5px 5px #aaa;
 }
 .face {
+ position: absolute;
   backface-visibility: hidden;
 }
 .face.back {
@@ -66,5 +67,6 @@ body> .projectBoxes> div{
   transform: rotateY(180deg);
   box-sizing: border-box;
   color: black;
+	text-align: center;
   background-color: #aaa;
 }
