--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -71,7 +71,7 @@ body> .projectBoxes> div{
   width: 100%;
   height: 100%;
   box-sizing: border-box;
-  transition: all 1.0s ease-in;
+  transition: all 1.0s;
   color: white;
   background-color: #000;
   padding: 10px;
