--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -41,39 +41,48 @@ body> .projectBoxes> div{
 
 }
 
-.flipcard {
-  position: relative;
-  width: 220px;
-  height: 160px;
-  perspective: 50px;
+
+
+
+
+.flip {
+  -webkit-perspective: 800;
+   width: 400px;
+   height: 200px;
+    position: relative;
+    margin: 50px auto;
 }
-.flipcard.v:hover .front, .flipcard.v.flip .front{
-  transform: rotateX(180deg);
+.flip .card.flipped {
+  -webkit-transform: rotatex(-180deg);
 }
-.flipcard.v:hover .back, .flipcard.v.flip .back{
-  transform: rotateX(0deg);
-}
-.flipcard.v .back{
-  transform: rotateX(-180deg);
-}
-.flipcard.h:hover .front, .flipcard.h.flip .front{
-  transform: rotateY(180deg);
-}
-.flipcard.h:hover .back, .flipcard.h.flip .back{
-  transform: rotateY(0deg);
-}
-.flipcard.h .back{
-  transform: rotateY(-180deg);
-}
-.flipcard .front, .flipcard .back
-{
-  position:absolute;
+.flip .card {
   width: 100%;
   height: 100%;
-  box-sizing: border-box;
-  transition: all 1.0s;
-  color: white;
-  background-color: #000;
-  padding: 10px;
-  backface-visibility: hidden;
+  -webkit-transform-style: preserve-3d;
+  -webkit-transition: 0.5s;
+}
+.flip .card .face {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  -webkit-backface-visibility: hidden ;
+  z-index: 2;
+    font-family: Georgia;
+    font-size: 3em;
+    text-align: center;
+    line-height: 200px;
+}
+.flip .card .front {
+  position: absolute;
+  z-index: 1;
+    background: black;
+    color: white;
+    cursor: pointer;
+}
+.flip .card .back {
+  -webkit-transform: rotatex(-180deg);
+    background: blue;
+    background: white;
+    color: black;
+    cursor: pointer;
 }
