--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -77,3 +77,13 @@ body> .projectBoxes> div{
   -webkit-transform: rotateY(-180deg);
           transform: rotateY(-180deg);
 }
+
+.card.effect__hover:hover .card__front {
+  -webkit-transform: rotateY(-180deg);
+          transform: rotateY(-180deg);
+}
+
+.card.effect__hover:hover .card__back {
+  -webkit-transform: rotateY(0);
+          transform: rotateY(0);
+}
