--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -48,7 +48,8 @@ body> .projectBoxes> postcard{
 	width: 67%;
 	margin: auto;
 	margin-top: 25px;
-	transform: rotateY(180deg);
+	 transition:all 2s ease-in-out;
+	  transform:rotateY(180deg);
 
 }
 
