--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -48,10 +48,17 @@ body> .projectBoxes> .postcard{
 	width: 67%;
 	margin: auto;
 	margin-top: 25px;
-	 transition:all 2s ease-in-out;
-	  transform:rotateY(180deg);
+	animation: rotate 1.4s infinite ease-in-out, background 1.4s infinite ease-in-out alternate;
 
 }
+
+@keyframes rotate {
+  0% {
+    transform: rotateX(0deg) rotateY(0deg);
+  }
+  100% {
+    transform: rotateY(180deg);
+  }
 
 
 
