--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -48,26 +48,16 @@ body> .projectBoxes> .postcard{
 	width: 67%;
 	margin: auto;
 	margin-top: 25px;
-	transform-style: preserve-3d;
-  	transition: transform 1s;
+	animation: rotate 5s infinite ease-in-out, background 5s ease-in-out alternate;
 
 }
 
-
-#postcard figure {
-  backface-visibility: hidden;
-}
-
-#postcard .front {
-  background: red;
-}
-#postcard .back {
-  background: blue;
-  transform: rotateY( 180deg );
-}
-
-#card.flipped: hover {
-  transform: rotateY( 180deg );
-}
+@keyframes rotate {
+  0% {
+    transform: rotateX(0deg) rotateY(0deg);
+  }
+  100% {
+    transform: rotateY(180deg);
+  }
 
 
