--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -42,7 +42,7 @@ body> .projectBoxes> div{
 }
 
 body> .projectBoxes> .postcard{
-	border: 10px solid green;
+	border: 10px solid red;
 	border-radius: 0px;
 	Background-color: white;
 	width: 67%;
@@ -52,12 +52,37 @@ body> .projectBoxes> .postcard{
 
 }
 
-@keyframes rotate {
-  0% {
-    transform: rotateX(0deg) rotateY(0deg);
-  }
-  100% {
-    transform: rotateX(-180deg) rotateY(180deg);
-  }
 
+/* card fronts and backs */
+.front,
+.back {
+  position: absolute;
+  top: 0;
+  left: 0;
+  //width: 100%;
+ // height: 100%;
+}
 
+.front,
+.back {
+          backface-visibility: hidden;
+          transition: transform 1.3s;
+}
+
+.front {
+  background-color: black;
+}
+
+.back {
+  background-color: red;
+          transform: rotateY(-180deg);
+}
+
+/* hover effect */
+.postcard.effect__hover:hover .front {
+          transform: rotateY(-180deg);
+}
+
+.postcard.effect__hover:hover .back {
+          transform: rotateY(0);
+}
