--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -41,3 +41,52 @@ body> .projectBoxes> div{
 
 }
 
+.container{
+  width:400px;
+  height:280px;
+  position: relative;
+}
+.card{
+  text-align:center;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.face {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+.face.front{
+  background:#000; 
+}
+.face.back {
+  display: block;
+  box-sizing: border-box;
+  padding: 20px;
+  color: white;
+  text-align: left;
+  background-color: #333;
+}
+
+
+.card:hover .front{
+  transform: rotateY(-180deg);
+}
+
+.card:hover .back {
+ transform: rotateY(0deg);
+}
+.face {
+  backface-visibility: hidden;
+  transform-style: preserve-3d;
+  transition: .5s;
+}
+.face.front {
+  transform: rotateY(0deg);
+} 
+
+.face.back {
+  transform: rotateY(180deg); 
+}
