--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -42,6 +42,17 @@ body> .projectBoxes> div{
 }
 
 
+.container{
+  width:400px;
+  height:280px;
+  position: relative;
+}
+.card{
+  text-align:center;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
 
 .face {
   position: absolute;
