--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -45,7 +45,12 @@ body> .projectBoxes> div{
 
 
 
+.face {
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
+
 .face.front{
   background:#000; 
 }
