--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -42,19 +42,20 @@ body> .projectBoxes> div{
 }
 
 
+
 .container{
- 	width: 200px;
-	height: 500px
+  width:200px;
+  height:300px;
   position: relative;
 }
-
 img{
-	margin: auto;
-  width: 25%;
+  margin: auto;
+  width: 67%;
+ 
 }
-
 .card{
   text-align:center;
+
 }
 
 .face {
@@ -66,8 +67,11 @@ img{
   background:#000; 
 }
 .face.back {
-  display: block;
+  //display: block;
+  //box-sizing: border-box;
+  padding: 20px;
   color: black;
+  text-align: left;
   background-color: #333;
 }
 
