--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -47,6 +47,7 @@ body> .projectBoxes> div{
   width:200px;
   height:300px;
   position: relative;
+Background-color: black;
 }
 img{
   margin: auto;
@@ -71,8 +72,7 @@ img{
   box-sizing: border-box;
   padding: 20px;
   color: black;
-  text-align: left;
-  background-color: #333;
+  background-color: black;
 }
 
 
