--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -65,12 +65,11 @@ img{
   height: 100%;
 }
 .face.front{
-  background:#000; 
+  background:black; 
 }
 .face.back {
   display: block;
   box-sizing: border-box;
-  padding: 20px;
   color: black;
   background-color: black;
 }
