--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -45,13 +45,13 @@ body> .projectBoxes> div{
 
 .container{
   width:200px;
-  height:600px;
+  height:67%;
   position: relative;
 Background-color: black;
 }
 img{
   margin: auto;
-  width: 85%;
+  width: 100%;
  
 }
 .card{
