--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -41,6 +41,16 @@ body> .projectBoxes> div{
 
 }
 
+.dummy{
+	border: 10px solid black;
+	border-radius: 0px;
+	Background-color: white;
+	width: 67%;
+	margin: auto;
+	margin-top: 25px;
+
+}
+
 .container{
 	 position: relative;
 }
