--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -42,7 +42,7 @@ body> .projectBoxes> div{
 }
 
 dummy{
-	border: 10px solid black;
+	border: 10px solid red;
 	border-radius: 0px;
 	Background-color: white;
 	width: 67%;
