--- a/CSS/grad.css
+++ b/CSS/grad.css
@@ -32,8 +32,17 @@ body .projectBoxes h3{
 }
 
 
+.info{
+	border: 10px solid black;
+	border-radius: 0px;
+	Background-color: white;
+	width: 67%;
+	margin: auto;
+	margin-top: 25px;
 
-.dummy{
+}
+
+dummy{
 	border: 10px solid red;
 	border-radius: 0px;
 	Background-color: white;
