--- a/CSS/navBar.css
+++ b/CSS/navBar.css
@@ -14,7 +14,7 @@ div.top{
 	top: 50%;
 	bottom: 50%
 	display: block;
-	background: url("../media/mt.jpg");
+	background: url("../media/city.jpg");
 	
 }
 
