--- a/CSS/navBar.css
+++ b/CSS/navBar.css
@@ -36,7 +36,13 @@ body> .boxed> .top> h1{
 }
 
 
+body> .boxed> .top> h4{
+	padding-top: 24px;
+	font-style: italic;
+	margin: 3px;
+	font-weight: lighter;
 
+}
 
 .buttons{
 	clear: left;
