--- a/CSS/navBar.css
+++ b/CSS/navBar.css
@@ -32,7 +32,7 @@ body> .boxed> .top> h1{
 	padding-top: 10px;
 	margin-top: 0px;
 	margin-bottom: 5px;
-	text-shadow: #000 0px 0px 1px;
+	 text-shadow: 2px 2px 0px #FF0000;
 
 }
 
