--- a/CSS/navBar.css
+++ b/CSS/navBar.css
@@ -43,7 +43,7 @@ body> .boxed> .top> h4{
 	font-style: italic;
 	margin: 3px;
 	font-weight: lighter;
-	text-shadow:1px 2px 9px white;
+	text-shadow: 2px 2px 9px blue;
 
 }
 
