--- a/CSS/navBar.css
+++ b/CSS/navBar.css
@@ -14,7 +14,7 @@ div.top{
 	top: 50%;
 	bottom: 50%
 	display: block;
-	background: url("../media/city.jpg");
+	background: url("../media/paper.jpg");
 	  background-position: right top;
 	text-shadow:1px 2px 4px white;
 	
