--- a/CSS/navBar.css
+++ b/CSS/navBar.css
@@ -15,8 +15,9 @@ div.top{
 	bottom: 50%
 	display: block;
 	background: url("../media/paper.jpg");
-	  background-position: right top;
+	background-position: right top;
 	text-shadow:1px 2px 4px white;
+	background-size: cover;
 	
 }
 
