--- a/CSS/navBar.css
+++ b/CSS/navBar.css
@@ -10,10 +10,9 @@
 	padding-top: -5px;
 }
 
-div.top{
+top{
 	top: 50%;
 	bottom: 50%
-	display: block;
 	background: url("../media/paper.jpg");
 	background-position: right top;
 	text-shadow:1px 2px 4px white;
