--- a/CSS/navBar.css
+++ b/CSS/navBar.css
@@ -10,9 +10,9 @@
 	padding-top: -5px;
 }
 
-top{
-	top: 50%;
-	bottom: 50%
+.top{
+	top: 0px;
+	bottom: 0px;
 	background: url("../media/paper.jpg");
 	background-position: right top;
 	text-shadow:1px 2px 4px white;
@@ -26,6 +26,7 @@ body> .boxed> .top> img{
 	padding-right: 25px;
         min-height: 130px;
 	min-width: 130px; 
+	bottom: 0px;
 
 }
 
