--- a/CSS/navBar.css
+++ b/CSS/navBar.css
@@ -41,7 +41,7 @@ body> .boxed> .top> h1{
 
 
 body> .boxed> .top> h4{
-	padding-top: 30px;
+	padding-top: 50%;
 	font-style: italic;
 	margin: 3px;
 	font-weight: lighter;
