--- a/CSS/navBar.css
+++ b/CSS/navBar.css
@@ -25,8 +25,8 @@ body> .boxed> .top> img{
 	height: 15%;
 	width: 15%;
 	padding-right: 25px;
-        min-height: 130px;
-	min-width: 130px; 
+        min-height: 8%;
+	min-width: 8%; 
 	bottom: 0px;
 
 }
