--- a/CSS/navBar.css
+++ b/CSS/navBar.css
@@ -22,12 +22,11 @@
 }
 
 body> .boxed> .top> img{
+	position: absolute;
+	bottom: 0px;
 	height: 15%;
 	width: 15%;
 	padding-right: 25px;
-        min-height: 25%;
-	min-width: 25%; 
-	bottom: 0px;
 
 }
 
@@ -41,6 +40,8 @@ body> .boxed> .top> h1{
 
 
 body> .boxed> .top> h4{
+	position: absolute;
+	bottom: 0px;
 	padding-top: 9%;
 	font-style: italic;
 	margin: 3px;
