--- a/CSS/navBar.css
+++ b/CSS/navBar.css
@@ -8,12 +8,13 @@
     	padding: 0px;
 	margin: auto;
 	padding-top: -5px;
+	
 }
 
 .top{
 	top: 0px;
 	bottom: 0px;
-	
+	position: relative;
 	background: url("../media/paper.jpg");
 	background-position: right top;
 	text-shadow:1px 2px 4px white;
@@ -22,7 +23,7 @@
 }
 
 body> .boxed> .top> img{
-	position: relative;
+	position: absolute;
 	bottom: 0px;
 	height: 15%;
 	width: 15%;
