--- a/CSS/navBar.css
+++ b/CSS/navBar.css
@@ -23,8 +23,7 @@
 }
 
 body> .boxed> .top> img{
-	position: absolute;
-	bottom: 0px;
+	position: bottom;
 	height: 15%;
 	width: 15%;
 	padding-right: 25px;
