--- a/CSS/navBar.css
+++ b/CSS/navBar.css
@@ -25,7 +25,8 @@
 body> .boxed> .top> img{
 	position: bottom;
 	height: 15%;
-	width: 15%;
+	min-height: 100px;
+	min-width: 100px;
 	padding-right: 25px;
 
 }
