--- a/CSS/navBar.css
+++ b/CSS/navBar.css
@@ -40,7 +40,7 @@ body> .boxed> .top> h1{
 
 
 body> .boxed> .top> h4{
-	padding-top: 10px;
+	padding-top: 9%;
 	font-style: italic;
 	margin: 3px;
 	font-weight: lighter;
