--- a/CSS/navBar.css
+++ b/CSS/navBar.css
@@ -17,9 +17,11 @@
 	background-position: right top;
 	text-shadow:1px 2px 4px white;
 	background-size: cover;
+	display: inline-block;
 		
 }
 .topimg{
+	display: inline-block;
 	max-width: 20%;
 }
 
