--- a/CSS/navBar.css
+++ b/CSS/navBar.css
@@ -11,18 +11,16 @@
 	position: relative;
 	background: url("../media/paper.jpg");
 	background-position: right top;
+	background-size: cover;
 	
 }
 
 .top{
-
 	text-shadow:1px 2px 4px white;
-	background-size: cover;
-	display: inline-block;
 		
 }
 
-img{
+.img{
 	display: inline-block;
 	height: 15%;
 	width: 15%;
