--- a/CSS/navBar.css
+++ b/CSS/navBar.css
@@ -35,6 +35,7 @@ h1{
 	margin-top: 0px;
 	margin-bottom: 5px;
 	text-shadow:1px 2px 4px white;
+	display:inline-block
 
 }
 
@@ -45,6 +46,7 @@ body> .boxed> .top> h4{
 	margin: 3px;
 	font-weight: lighter;
 	text-shadow: 2px 2px 9px white;
+	display:inline-block
 
 }
 
