--- a/CSS/navBar.css
+++ b/CSS/navBar.css
@@ -3,52 +3,44 @@
 	border: 10px solid black;
     	border-radius: 8px;
 	background-color: white;
-    	height: 15%;
+    	
 	width: 97%;
     	padding: 0px;
 	margin: auto;
 	padding-top: -5px;
-	position: relative;
-	background: url("../media/paper.jpg");
-	background-position: right top;
-	background-size: cover;
+}
+
+div.top{
+	top: 50%;
+	bottom: 50%
+	display: block;
+	background: url(../media/picBW ) blue;
 	
 }
 
-.top{
-	text-shadow:1px 2px 4px white;
-		
-}
-
-img{
-	display: inline-block;
+body> .boxed> .top> img{
 	height: 15%;
 	width: 15%;
-	min-height: 125px;
-	min-width: 125px;
 	padding-right: 25px;
-
+	min-height: 150px;
+	min-width: 150px; 
 }
 
-h1{
+body> .boxed> .top> h1{
 	padding-top: 10px;
 	margin-top: 0px;
 	margin-bottom: 5px;
-	text-shadow:1px 2px 4px white;
-	display:inline-block
 
 }
 
-
 body> .boxed> .top> h4{
-	padding-top: 10px;
+	padding-top: 24px;
 	font-style: italic;
 	margin: 3px;
 	font-weight: lighter;
-	text-shadow: 2px 2px 9px white;
-	display:inline-block
 
 }
+
 
 .buttons{
 	clear: left;
