--- a/CSS/navBar.css
+++ b/CSS/navBar.css
@@ -2,8 +2,8 @@
 	font-family: Helvetica;
 	border: 10px solid black;
     	border-radius: 8px;
-	background-color: white;
-    	
+
+    	background: url("../media/paper.jpg") gray;
 	width: 97%;
     	padding: 0px;
 	margin: auto;
@@ -14,7 +14,7 @@ div.top{
 	top: 50%;
 	bottom: 50%
 	display: block;
-	background: url(../media/picBW ) blue;
+	
 	
 }
 
