--- a/CSS/navBar.css
+++ b/CSS/navBar.css
@@ -2,7 +2,7 @@
 	font-family: Helvetica;
 	border: 10px solid black;
     	border-radius: 8px;
-
+	background-size: cover;
     	background: url("../media/paper.jpg") gray;
 	width: 97%;
     	padding: 0px;
