--- a/CSS/navBar.css
+++ b/CSS/navBar.css
@@ -3,7 +3,7 @@
 	border: 10px solid black;
     	border-radius: 8px;
 	background-size: cover;
-    	background: url("../media/paper.jpg") gray;
+    	background: url("../media/city.jpg") gray;
 	width: 97%;
     	padding: 0px;
 	margin: auto;
