--- a/CSS/navBar.css
+++ b/CSS/navBar.css
@@ -4,7 +4,7 @@
     	border-radius: 8px;
 	background-size: cover;
 	background-position: right;
-    	background: url("../media/mt.jpg") gray;
+    	background: url("../media/city.jpg") gray;
 	background-position: right;
 	background-repeat: no-repeat;
 	width: 97%;
